Update of NewGUI

--- a/mvt_digiprint_gui/Converters/Converters.xaml
+++ b/mvt_digiprint_gui/Converters/Converters.xaml
@@ -127,6 +127,7 @@
     <alignment_converters:FaultTypeConverter x:Key="FaultTypeConverter"/>
 
     <alignment_converters:ExpandSectionIconConverter x:Key="ExpandSectionIconConverter"/>
+    <alignment_converters:ExitDialogIconConverter x:Key="ExitDialogIconConverter"/>
     
 
     <converters:InkSupplyStatusColorConverter_Connected x:Key="InkSupplyStatusColorConverter_Connected"/>
