--- a/mvt_digiprint_gui/Views/AlignmentView/AlignmentSettings.xaml
+++ b/mvt_digiprint_gui/Views/AlignmentView/AlignmentSettings.xaml
@@ -1,11 +1,14 @@
-﻿<Window x:Class="RX_DigiPrint.Views.AlignmentView.AlignmentSettings"
+﻿<helpers:CustomWindow  x:Class="RX_DigiPrint.Views.AlignmentView.AlignmentSettings"
+        xmlns:helpers="clr-namespace:RX_DigiPrint.Helpers"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"
-             xmlns:rx   ="clr-namespace:RX_DigiPrint.Helpers"
-        Title="AlignmentSettings" Height="300" Width="400">
+        Title="AlignmentSettings" 
+         ResizeMode="NoResize"
+        Loaded="Window_Loaded"
+        Height="300"
+        Width="400">
 
         <GroupBox Margin="10" Style="{StaticResource MvtGroupBox}" Header="Units">
             <Grid>
@@ -56,4 +59,4 @@
         </Grid>
         </GroupBox>
 
-</Window>
+</helpers:CustomWindow>
