--- a/mvt_digiprint_gui/Views/AlignmentView/HeadAdjustmentHelpView.xaml
+++ b/mvt_digiprint_gui/Views/AlignmentView/HeadAdjustmentHelpView.xaml
@@ -1,26 +1,21 @@
-﻿<helpers:CustomWindow  x:Class="RX_DigiPrint.Views.Alignment.SoftwareValueCorrectionView"
-                       xmlns:helpers="clr-namespace:RX_DigiPrint.Helpers"
+﻿<UserControl x:Class="RX_DigiPrint.Views.Alignment.HeadAdjustmentHelpView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
-        Loaded="Window_Loaded"
         mc:Ignorable="d"
-        SizeToContent="WidthAndHeight"
-        Title="Head Adjustment">
+        >
 
-    <Window.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
 
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Slider.xaml" />
-            
-           
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Window.Resources>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -54,24 +49,56 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
-
             </Grid.RowDefinitions>
 
             <common:MvtButton Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" Tag="1" Name="GoBackButton" Grid.Column="5" Grid.Row="0"
                              Margin="5" Click="GoBackButton_Click" ToolTip="Back"
-                             HorizontalAlignment="Left">
+                             HorizontalAlignment="Left" Visibility="{Binding HasRecommendedValue, Converter={StaticResource BoolToInVisible_Converter}}">
                 <Grid Height="32" Width="32">
                     <iconPacks:PackIconMaterial  Kind="ImageOutline"  Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="17" Height="12" HorizontalAlignment="Left" Margin="0,10,0,0"/>
                     <iconPacks:PackIconMaterial  Kind="ImageOutline"  Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="17" Height="12" HorizontalAlignment="Right" Margin="0,10,0,0"/>
                 </Grid>
-            </common:MvtButton> 
+            </common:MvtButton>
 
             <Grid Grid.Row="1">
-               <Image Height="300" Stretch="Uniform" Margin="5" Source="{Binding InstructionsImagePath}"></Image>
+                <ScrollViewer  Visibility="{Binding RobotIsConnected, Converter={StaticResource BooleanNotToVisibleConverter}}" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                    <StackPanel  Grid.Row="1" Margin="10" Orientation="Horizontal" HorizontalAlignment="Center" x:Name="InstructionsImageStackPanel"></StackPanel>
+                </ScrollViewer>
+                <Image Height="300" Stretch="Uniform" Margin="5" Visibility="{Binding RobotIsConnected, Converter={StaticResource BooleanToVisibleConverter}}" Source="{Binding RobotConnectedImagePath}"></Image>
+            </Grid>
+
+            <!-- No Robot -->
+            <Grid Grid.Row="2" Margin="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                    
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                
+                <Grid.Visibility>
+                    <MultiBinding Converter="{StaticResource BooleanAndNotToVisibilityConverter}">
+                        <Binding Path="HasRecommendedValue"/>
+                        <Binding Path="RobotIsConnected"/>
+                    </MultiBinding>
+                </Grid.Visibility>
+                <TextBlock Grid.Column="0" Grid.ColumnSpan="4" Margin="0, 10, 0, 10" VerticalAlignment="Center" HorizontalAlignment="Left"
+                    Text="{Binding ConversionInfoString}"></TextBlock>
+                
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="0, 5, 10, 5" VerticalAlignment="Center" HorizontalAlignment="Left">x =</TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="1" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Left" 
+                           Text="{Binding CorrectionValueAsString, StringFormat=N2}"></TextBlock>
+                
             </Grid>
 
 
-            <Grid Grid.Row="2" Margin="10">
+            <!-- Robot connected -->
+            <Grid Grid.Row="2" Margin="10" Visibility="{Binding RobotIsConnected, Converter={StaticResource BooleanToVisibleConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -84,11 +111,11 @@
                     <ColumnDefinition Width="auto"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Margin="0, 10, 0, 10" VerticalAlignment="Center" HorizontalAlignment="Left"
-                         > 21 μm = 1 dot
-                </TextBlock>
-
-                <TextBlock Grid.Column="0" Grid.Row="1"  Margin="0, 10, 0, 10" VerticalAlignment="Center" HorizontalAlignment="Left">                   
+                <TextBlock Grid.Column="0" Grid.ColumnSpan="4" Margin="0, 10, 0, 10" VerticalAlignment="Center" HorizontalAlignment="Left"
+                           Text="{Binding ConversionInfoString}">
+                   </TextBlock>
+                
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="0, 10, 0, 10" VerticalAlignment="Center" HorizontalAlignment="Left">                   
                     x =</TextBlock>
 
                 <TextBlock Grid.Row="1"  Grid.Column="1" Margin="5, 10, 0, 10" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Black"
@@ -96,12 +123,13 @@
                 </TextBlock>
 
                 <common:MvtNumBox Grid.Row="1"  VerticalContentAlignment="Center" Grid.Column="2" Margin="5, 10, 0, 10" 
-                                 Text="{Binding AbsolutCorrectionValueAsString}">
+                                 Text="{Binding AbsolutCorrectionValue, StringFormat=N2}">
                 </common:MvtNumBox>
 
                 <TextBlock Grid.Row="1"  Grid.Column="3" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Left"
                            Text="{Binding CorrectionValueAsString}">
                 </TextBlock>
+
                     
             </Grid>
 
@@ -114,7 +142,7 @@
       
                 <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal" Margin="10">
 
-                    <common:MvtButton Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" Margin="5"
+                    <common:MvtButton Visibility="{Binding RobotIsConnected, Converter={StaticResource BooleanToVisibleConverter}}"  Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" Margin="5"
                                  Click="OkayButton_Click">
                         <iconPacks:PackIconMaterial 
                                                     Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}"
@@ -122,7 +150,7 @@
                                         VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20"/>
                     </common:MvtButton>
 
-                    <common:MvtButton
+                    <common:MvtButton Visibility="{Binding RobotIsConnected, Converter={StaticResource BooleanToVisibleConverter}}" 
                                      Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" Margin="5"
                                  Click="Cancel_Click">
                         <iconPacks:PackIconMaterial Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}"
@@ -132,6 +160,10 @@
                 </StackPanel>
             </Grid>
             
+            
+
+
+
         </Grid>
     </Grid>
-</helpers:CustomWindow>
+</UserControl>
