--- a/mvt_digiprint_gui/Views/AlignmentView/HeadAdjustmentView.xaml
+++ b/mvt_digiprint_gui/Views/AlignmentView/HeadAdjustmentView.xaml
@@ -1,10 +1,12 @@
-﻿<Window x:Class="RX_DigiPrint.Views.Alignment.HeadAdjustmentView"
+﻿<helpers:CustomWindow  x:Class="RX_DigiPrint.Views.Alignment.HeadAdjustmentView"
+        xmlns:helpers="clr-namespace:RX_DigiPrint.Helpers"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
         Title="HeadAdjustment" SizeToContent="WidthAndHeight">
     <Grid x:Name="MainGrid">
     </Grid>
-</Window>
+</helpers:CustomWindow>
