--- a/mvt_digiprint_gui/Views/PrintSystemExtended/Settings/PrintSystemSettings.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemExtended/Settings/PrintSystemSettings.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="RX_DigiPrint.Views.PrintSystemExtendedView.PrintSystemSettings"
+﻿<helpers:CustomWindow  x:Class="RX_DigiPrint.Views.PrintSystemExtendedView.PrintSystemSettings"
+            xmlns:helpers="clr-namespace:RX_DigiPrint.Helpers"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +7,11 @@
              xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"
              xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                       Loaded="CustomWindow_Loaded"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
         SizeToContent="Height"
+         ResizeMode="NoResize"
             Title="Printer Settings"
              >
     <Grid Margin="10">
@@ -84,4 +87,4 @@
         </StackPanel>
     </Grid>
 
-</Window>
+</helpers:CustomWindow>
