--- a/mvt_digiprint_gui/Views/PrintSystemView/ChillerView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/ChillerView.xaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
-    <GroupBox Style="{StaticResource MvtGroupBox}" Header="Chiller" Visibility="{Binding Enabled, Converter={StaticResource BoolToVisible_Converter}}">
+    <GroupBox Style="{StaticResource MvtGroupBox}" Header="Chiller">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
