--- a/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
@@ -4,17 +4,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:ig="http://schemas.infragistics.com/xaml"
-             xmlns:igGrids="http://infragistics.com/DataPresenter"
-             xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"
-             xmlns:igWin="http://infragistics.com/Windows" 
-             xmlns:converters="clr-namespace:RX_DigiPrint.Converters"
-             xmlns:models="clr-namespace:RX_DigiPrint.Models"
-             xmlns:Infragistics="clr-namespace:Infragistics;assembly=InfragisticsWPF4.Controls.Grids.XamGrid.v13.2"
-             xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:rx="clr-namespace:RX_DigiPrint.Helpers"
-             xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
              xmlns:rxView="clr-namespace:RX_DigiPrint.Views.PrintSystemView"
              xmlns:rx_uc="clr-namespace:RX_DigiPrint.Views.UserControls"
              mc:Ignorable="d"
@@ -27,7 +19,7 @@
 
     <UserControl.Resources>
         <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">32</sys:Double>
-        <!--    <sys:Double x:Key="{x:Static SystemParameters.HorizontalScrollBarHeightKey}">50</sys:Double> -->
+        <sys:Double x:Key="{x:Static SystemParameters.HorizontalScrollBarHeightKey}">32</sys:Double>
     </UserControl.Resources>
 
     <Grid x:Name="MainGrid" HorizontalAlignment="Stretch" Background="Transparent">
@@ -41,11 +33,11 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
+
             <rx_uc:Splicing VerticalAlignment="Center" HorizontalAlignment="Center"></rx_uc:Splicing>
-            
+
             <rx_uc:MouventTopToolBar  HorizontalAlignment="Right" Grid.Column="0"></rx_uc:MouventTopToolBar>
-            
+
             <StackPanel Grid.Row="0" HorizontalAlignment="Left" Orientation="Horizontal">
                 <common:MvtButton x:Name="Button_Save" Grid.Row="0" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Save_Clicked" Margin="15, 5, 0, 5"
                                   IsChecked="{Binding Changed}">
@@ -63,25 +55,59 @@
 
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" PanningMode="VerticalOnly">
             <StackPanel>
-                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden">
+
+                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" Margin="10">
                     <!-- Print System ___________________________________________________________________________________________-->
                     <Grid x:Name="PrintSystemPanel">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
-                        
-                        <rxView:PrintSystemGrid Grid.Column="0" Margin="10,10,0,0"/>
-                        <rxView:OffsetsGrid x:Name="OffsetsGrid" Grid.Column="1" Margin="10,10,0,0"/>
-                        <Grid x:Name="StepperGrid" Grid.Column="2" Margin="10,10,0,0"/>
-                        <rxView:EncoderView x:Name="EncoderGrid" Grid.Column="3" Margin="10,10,0,0"/>
-                        <rxView:ChillerView Grid.Column="4" Margin="10,10,0,0"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <common:MvtButton Grid.Column="0" Visibility="{Binding IsFirstInView, Converter={StaticResource BoolToVisible_Converter}}" 
+                          Grid.Row="6" Grid.RowSpan="3" VerticalAlignment="Top" HorizontalAlignment="Left"  
+                          Click="ExpandSettings_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.ExpandCollapseButton}">
+                                <iconPacks:PackIconMaterial VerticalAlignment="Center" HorizontalAlignment="Center"
+                                            Style="{StaticResource Mouvent.RoundIconButtonStyle.ExpandCollapseIcon}" Width="20" Height="20" 
+                                                Kind="{Binding ExpandSettingsPanel, Converter={StaticResource ExpandSectionIconConverter}}"></iconPacks:PackIconMaterial>
+                            </common:MvtButton>
+                            <Border Margin="10,0,0,0" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToInVisible_Converter}}" Background="WhiteSmoke"
+                                    Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="0" Height="40" VerticalAlignment="Top">
+                                <Label Foreground="#ff303030" FontWeight="SemiBold" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <ContentPresenter Margin="0" Content="Settings"/>
+                                </Label>
+                            </Border>
+
+                            <Grid Grid.Row="0" Grid.Column="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <rxView:PrintSystemGrid Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}" Grid.Column="1" Margin="10,0,0,0"/>
+                                <rxView:OffsetsGrid x:Name="OffsetsGrid" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}" Grid.Column="2" Margin="10,0,0,0"/>
+                                <Grid x:Name="StepperGrid" Grid.Column="3" Margin="10,0,0,0" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}"/>
+                                <rxView:EncoderView x:Name="EncoderGrid" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}" Grid.Column="4" Margin="10,0,0,0"/>
+                                <Grid Grid.Column="5" Margin="10,0,0,0">
+                                    <Grid.Visibility>
+                                        <MultiBinding Converter="{StaticResource BooleanAndToVisibleConverter}" UpdateSourceTrigger="PropertyChanged">
+                                            <Binding Path="ExpandSettingsPanel" />
+                                            <Binding Path="ChillerEnabled"/>
+                                        </MultiBinding>
+                                    </Grid.Visibility>
+                                    <rxView:ChillerView />
+                                </Grid>
+                                
+                            </Grid>
+                        </Grid>
                     </Grid>
                 </ScrollViewer>
-               
+
                 <!-- Ink Supply ________________________________________________________________________________________________________________________ -->
                 <GroupBox Style="{StaticResource MvtGroupBox}" Header="Ink Supply" Margin="10,10,10,0">
                     <Grid>
@@ -89,7 +115,7 @@
                             <ColumnDefinition Width="auto"/>
                             <ColumnDefinition Width="100"/>
                         </Grid.ColumnDefinitions>
-                        
+
                         <rxView:InkSupplyGrid x:Name="InkSupplyGrid"/>
                         <TextBlock x:Name="ChillerError" Text="Chiller not running" Visibility="{Binding Running, Converter={StaticResource BoolToInVisible_Converter}}" Foreground="Crimson" FontWeight="Bold" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         <StackPanel Grid.Column="1" x:Name="RobotButtons" Visibility="{Binding TxRobot, Converter={StaticResource BoolToVisible_Converter}}">
@@ -109,7 +135,7 @@
                         <rxView:PrintHeadGrid x:Name="PrintHeadGrid"/>
                     </Grid>
                 </GroupBox>
-                
+
                 <!--
                Head Distance
                 <StackPanel x:Name="HeadDistPanel" Margin="10, 0, 10, 0">
