--- a/mvt_digiprint_gui/Views/Settings/SettingsDlg.xaml
+++ b/mvt_digiprint_gui/Views/Settings/SettingsDlg.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RX_DigiPrint.Views.Settings.SettingsDlg"
+﻿<rx:CustomWindow x:Class="RX_DigiPrint.Views.Settings.SettingsDlg"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,13 +9,21 @@
              xmlns:local="clr-namespace:RX_DigiPrint.Views.Settings"
              xmlns:rx="clr-namespace:RX_DigiPrint.Helpers"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             mc:Ignorable="d" 
-             Title="Settings" Width="700" Height="720">
-    <ScrollViewer>
+             Loaded="Window_Loaded"
+             mc:Ignorable="d"
+             Top="20" Left="20"
+             Title="Settings"
+        Width="600" 
+        Height="740"
+        ResizeMode="NoResize">
+    <Grid>
+        <!-- 
+        <ScrollViewer>
         <ScrollViewer.Resources>
             <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">30</sys:Double>
             <sys:Double x:Key="{x:Static SystemParameters.HorizontalScrollBarHeightKey}">30</sys:Double>
         </ScrollViewer.Resources>
+        -->
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
@@ -82,7 +90,7 @@
                     <rx:MvtTextBox Grid.Row="3" Grid.Column="1" Margin="2" Text="{Binding Host_Mask}"/>
                 </Grid>
             </GroupBox>
-            
+
             <!-- Commands Grid ___________________________________________________________________-->
             <GroupBox Grid.Row="1" Grid.Column="0" Header="Support Commands" Style="{StaticResource MvtGroupBox}" Margin="10,10,0,0">
                 <StackPanel Margin="5" HorizontalAlignment="Center">
@@ -170,5 +178,6 @@
 
             </StackPanel>
         </Grid>
-    </ScrollViewer>
-</Window>
+        <!-- </ScrollViewer> -->
+    </Grid>
+</rx:CustomWindow>
