--- a/mvt_digiprint_gui/Views/UserControls/UserAccount.xaml
+++ b/mvt_digiprint_gui/Views/UserControls/UserAccount.xaml
@@ -7,7 +7,9 @@
         Loaded="Window_Loaded"
         Closing="Window_Closing"
         SizeToContent="Height"
-        Title="UserAccount" Height="450" Width="300">
+        Title="UserAccount"
+        Height="450" Width="300"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
