--- a/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
@@ -112,7 +112,7 @@
         </Grid>
 
         <!-- RIP Settings _____________________________________________________________________________-->
-        <Grid Margin="5, 10, 5, 5">
+        <Grid Margin="5,10,5,5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="140" />
                 <ColumnDefinition Width="60" />
@@ -158,9 +158,12 @@
                     />
             <TextBlock  Margin="5, 0, 0, 5" Grid.Row="2" Grid.Column="3" Text="m/min" x:Name="SpeedUnit"/>
 
-            <TextBlock   Margin="0, 0, 0, 5"       Grid.Row="3" Grid.Column="0" Text="Image Margin" />
-                <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5"   Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch"/>
-            <TextBlock    Margin="5, 0, 0, 5"      Grid.Row="3" Grid.Column="2" Text="mm"  x:Name="MarginUnit"/>
+            <TextBlock  Margin="0, 0, 0, 5"       Grid.Row="3" Grid.Column="0" Text="Image Margin" />
+            <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5"   Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch"/>
+            <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal">
+                <TextBlock  Margin="5, 0, 5, 5" Text="mm"  x:Name="MarginUnit"/>
+                <TextBlock  Text="&#x0081;" FontFamily="Wingdings" />
+            </StackPanel>
 
             <TextBlock Margin="0, 0, 0, 5" Grid.Row="4" Grid.Column="0" Text="PrintGo Mode" VerticalAlignment="Center"/>
             <rx:RxComboBox Margin="0, 0, 0, 5" x:Name="CB_PrintGoMode"
@@ -170,11 +173,14 @@
                     >
             </rx:RxComboBox>
 
-            <TextBlock       Margin="0, 0, 0, 5"   Grid.Row="5" Grid.Column="0" Text="Image Distance" />
+            <TextBlock   Margin="0, 0, 0, 5"   Grid.Row="5" Grid.Column="0" Text="Image Distance" />
             <common:MvtNumBox  Margin="0, 0, 0, 5"  Grid.Row="5" Grid.Column="1" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" Min="0"/>
-            <TextBlock     Margin="5, 0, 0, 5"     Grid.Row="5" Grid.Column="2" Text="mm" x:Name="DistUnit"/>
+            <StackPanel  Grid.Row="5" Grid.Column="2" Orientation="Horizontal">
+                <TextBlock Margin="5, 0, 5, 5" Text="mm" x:Name="DistUnit"/>
+                <TextBlock Text="&#x0082;" FontFamily="Wingdings" />
+            </StackPanel>
 
-        </Grid>
+            </Grid>
         
             <StackPanel Margin="0, 10, 0, 10" Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="3" x:Name="ShowButtonGrid" 
                     HorizontalAlignment="Center" Visibility="{Binding Changed, Converter={StaticResource IntToVisible_Converter}}">
@@ -195,9 +201,10 @@
                     HorizontalAlignment="Center" 
                     Margin="0,5,0,0"
                     Source="{Binding Preview}"
-                    Orientation="{Binding Orientation}"/>
+                    Orientation="{Binding Orientation}"
+                    PrintGoMode="{Binding PrintGoMode}"
+                    />
 
-
-    </StackPanel>
+        </StackPanel>
     </GroupBox>
 </UserControl>
