--- a/mvt_digiprint_gui/Resources/MouventButtonStyle.xaml
+++ b/mvt_digiprint_gui/Resources/MouventButtonStyle.xaml
@@ -677,7 +677,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType ="{x:Type Button}">
                     <Grid Background="Transparent">
-                        <Ellipse  HorizontalAlignment="Center" VerticalAlignment="Center" Name ="Ellipse" Width ="16" Height ="16" Fill ="WhiteSmoke"/>
+                        <Ellipse  HorizontalAlignment="Center" VerticalAlignment="Center" Name ="Ellipse" Width ="16" Height ="16" Fill ="#ffeaeaea"/>
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Grid>
                 </ControlTemplate>
