--- a/mvt_digiprint_gui/Resources/XamGrid_Styles.xaml
+++ b/mvt_digiprint_gui/Resources/XamGrid_Styles.xaml
@@ -129,6 +129,7 @@
     </Style>
     <Style x:Key="XamGridTextBlockStyle" TargetType="{x:Type TextBlock}">
         <Setter Property="Margin" Value="8,0,0,0"></Setter>
+        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
     </Style>
     <!-- _________________________ ExpansionIndicator __________________________________________ -->
     <!-- SOURCE F:\Compiler\Infragistics\2013.2\WPF\DefaultStyles\Windows\PrimitivesGeneric_Express.xaml -->
