--- a/mvt_digiprint_gui/Views/EnevtView.xaml
+++ b/mvt_digiprint_gui/Views/EnevtView.xaml
@@ -1,17 +1,14 @@
 ﻿<UserControl
              x:Class="RX_DigiPrint.Views.EventView"
- 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:igGrids="http://infragistics.com/DataPresenter"
-             xmlns:ig="http://schemas.infragistics.com/xaml"
-             xmlns:Infragistics="clr-namespace:Infragistics;assembly=InfragisticsWPF4.Controls.Grids.XamGrid.v13.2"
-             xmlns:rx_uc="clr-namespace:RX_DigiPrint.Views.UserControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ig="http://schemas.infragistics.com/xaml"
+    xmlns:rx_uc="clr-namespace:RX_DigiPrint.Views.UserControls"
              xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
-            xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             mc:Ignorable="d" 
+            xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:rx="clr-namespace:RX_DigiPrint.Helpers"
+    mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="1200">
     <Grid>
         <Grid.RowDefinitions>
@@ -44,36 +41,35 @@
             CellStyle="{DynamicResource XamGridLogCellControlStyle}"
             RowHover="Row"
             Background="Transparent"
+            Panel.ZIndex="0"
             >
            
             <ig:XamGrid.SelectionSettings>
                 <ig:SelectionSettings CellClickAction="SelectRow"/>
             </ig:XamGrid.SelectionSettings>
-            
+
             <ig:XamGrid.Columns>
                 <ig:UnboundColumn Width="40" HorizontalContentAlignment="Center" Key="Log Type" HeaderText=" " ValueConverter="{StaticResource UnboundColumnToLogTypeConverter}">
                     <ig:UnboundColumn.ItemTemplate>
                         <DataTemplate>
-                                <Button>
-                                    <Button.Style>
-                                        <MultiBinding Converter="{StaticResource LogTypeColorButton_Converter}">
-                                            <MultiBinding.Bindings>
-                                                <Binding RelativeSource="{RelativeSource Self}"/>
-                                                <Binding Path="Value"/>
-                                            </MultiBinding.Bindings>
-                                        </MultiBinding>
-                                    </Button.Style>
-                                </Button>
-                           
+                            <Button Click="ColorButton_Click">
+                                <Button.Style>
+                                    <MultiBinding Converter="{StaticResource LogTypeColorButton_Converter}">
+                                        <MultiBinding.Bindings>
+                                            <Binding RelativeSource="{RelativeSource Self}"/>
+                                            <Binding Path="Value"/>
+                                        </MultiBinding.Bindings>
+                                    </MultiBinding>
+                                </Button.Style>
+                            </Button>
                         </DataTemplate>
                 </ig:UnboundColumn.ItemTemplate>
                 </ig:UnboundColumn>
-                
-                <ig:TextColumn Key="TimeStr"  HeaderText="Time" Width="auto" MinimumWidth="200"
+
+                <ig:TextColumn Key="TimeStrShort"  HeaderText="Time" Width="auto"
                                TextBlockStyle="{StaticResource XamGridTextBlockStyle}">
-                    
                 </ig:TextColumn>
-                <ig:TextColumn Key="DeviceStr"  TextBlockStyle="{StaticResource XamGridTextBlockStyle}" HeaderText="Device"  Width="100" HorizontalContentAlignment="Left"/>
+                <ig:TextColumn Key="DeviceStr"  TextBlockStyle="{StaticResource XamGridTextBlockStyle}" HeaderText="Device"  Width="auto" HorizontalContentAlignment="Left"/>
                 <ig:TextColumn Key="Error"      TextBlockStyle="{StaticResource XamGridTextBlockStyle}" HeaderText="No"      HorizontalContentAlignment="Left"/>
                 <ig:TextColumn Key="Message"    TextBlockStyle="{StaticResource XamGridTextBlockStyle}" HeaderText="Message" Width="*"/>
                 <ig:TextColumn Key="File"       TextBlockStyle="{StaticResource XamGridTextBlockStyle}" HeaderText="File"    Width="auto"/>
@@ -81,5 +77,15 @@
             </ig:XamGrid.Columns>
         </ig:XamGrid>
 
+        <rx:RxPopup x:Name="LongTextPopUp"
+                   Panel.ZIndex="10"
+                   Width="auto"
+                   IsHitTestVisible="False"
+                   OpacityMask="White"
+                   >
+            <Border Background="{StaticResource Mouvent.LightOrangeBrush}" Margin="5" CornerRadius="5">
+                <TextBlock Margin="10" x:Name="PopUpText" TextWrapping="Wrap"></TextBlock>
+            </Border>
+        </rx:RxPopup>
     </Grid>
 </UserControl>
