--- a/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
@@ -14,8 +14,7 @@
              Background="Transparent"
              HorizontalAlignment="Stretch"
              IsVisibleChanged="UserControl_IsVisibleChanged"
-             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-            >
+             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:rx="clr-namespace:RX_DigiPrint.Helpers">
 
     <UserControl.Resources>
         <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">32</sys:Double>
@@ -55,17 +54,25 @@
 
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" PanningMode="VerticalOnly">
             <StackPanel>
-
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" Margin="10">
                     <!-- Print System ___________________________________________________________________________________________-->
                     <Grid x:Name="PrintSystemPanel">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
-                            <common:MvtButton Grid.Column="0" Visibility="{Binding IsFirstInView, Converter={StaticResource BoolToVisible_Converter}}" 
+                            <common:MvtButton Margin="0,0,10,0" Name="TxRobotButton" Grid.Column="0" Visibility="{Binding TxRobot, Converter={StaticResource BoolToVisible_Converter}}" 
+                          VerticalAlignment="Top"
+                          Click="TxRobot_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeM}" Height="40">
+                                <iconPacks:PackIconMaterial VerticalAlignment="Center" HorizontalAlignment="Center"
+                                            Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="20" Height="20" 
+                                                Kind="RobotIndustrial"></iconPacks:PackIconMaterial>
+                            </common:MvtButton>
+
+                            <common:MvtButton Grid.Column="1" Visibility="{Binding IsFirstInView, Converter={StaticResource BoolToVisible_Converter}}" 
                           Grid.Row="6" Grid.RowSpan="3" VerticalAlignment="Top" HorizontalAlignment="Left"  
                           Click="ExpandSettings_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.ExpandCollapseButton}">
                                 <iconPacks:PackIconMaterial VerticalAlignment="Center" HorizontalAlignment="Center"
@@ -73,13 +80,13 @@
                                                 Kind="{Binding ExpandSettingsPanel, Converter={StaticResource ExpandSectionIconConverter}}"></iconPacks:PackIconMaterial>
                             </common:MvtButton>
                             <Border Margin="10,0,0,0" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToInVisible_Converter}}" Background="WhiteSmoke"
-                                    Grid.Column="1" Grid.ColumnSpan="5" Grid.Row="0" Height="40" VerticalAlignment="Top">
+                                    Grid.Column="2" Grid.ColumnSpan="5" Grid.Row="0" Height="40" VerticalAlignment="Top">
                                 <Label Foreground="#ff303030" FontWeight="SemiBold" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <ContentPresenter Margin="0" Content="Settings"/>
                                 </Label>
                             </Border>
 
-                            <Grid Grid.Row="0" Grid.Column="1">
+                            <Grid Grid.Row="0" Grid.Column="2">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto"/>
                                     <ColumnDefinition Width="auto"/>
@@ -91,8 +98,8 @@
 
                                 <rxView:PrintSystemGrid Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}" Grid.Column="1" Margin="10,0,0,0"/>
                                 <rxView:OffsetsGrid x:Name="OffsetsGrid" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}" Grid.Column="2" Margin="10,0,0,0"/>
-                                <Grid x:Name="StepperGrid" Grid.Column="3" Margin="10,0,0,0" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}"/>
-                                <rxView:EncoderView x:Name="EncoderGrid" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}" Grid.Column="4" Margin="10,0,0,0"/>
+                                <Grid x:Name="StepperGrid" Grid.Column="3" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}"/>
+                                <rxView:EncoderView x:Name="EncoderGrid" Visibility="{Binding ExpandSettingsPanel, Converter={StaticResource BoolToVisible_Converter}}" Grid.Column="4"/>
                                 <Grid Grid.Column="5" Margin="10,0,0,0">
                                     <Grid.Visibility>
                                         <MultiBinding Converter="{StaticResource BooleanAndToVisibleConverter}" UpdateSourceTrigger="PropertyChanged">
@@ -102,7 +109,7 @@
                                     </Grid.Visibility>
                                     <rxView:ChillerView />
                                 </Grid>
-                                
+
                             </Grid>
                         </Grid>
                     </Grid>
@@ -111,26 +118,18 @@
                 <!-- Ink Supply ________________________________________________________________________________________________________________________ -->
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" Margin="10,10,10,0">
                     <GroupBox Style="{StaticResource MvtGroupBox}" Header="Ink Supply" >
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="100"/>
-                        </Grid.ColumnDefinitions>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="100"/>
+                            </Grid.ColumnDefinitions>
 
-                        <rxView:InkSupplyGrid x:Name="InkSupplyGrid"/>
-                        <TextBlock x:Name="ChillerError" Text="Chiller not running" Visibility="{Binding Running, Converter={StaticResource BoolToInVisible_Converter}}" Foreground="Crimson" FontWeight="Bold" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <StackPanel Margin="20,0,0,0" Grid.Column="1" x:Name="RobotButtons" Visibility="{Binding TxRobot, Converter={StaticResource BoolToVisible_Converter}}">
-                            <Button Margin="5" Style="{StaticResource Mouvent.StandardButton}" Content="CAP"      Click="Cap_Clicked"/>
-                            <Button Margin="5" Style="{StaticResource Mouvent.StandardButton}" Content="Wipe"     Click="Wipe_Clicked"/>
-                            <Button Margin="5" Style="{StaticResource Mouvent.StandardButton}" Content="Vacuum"   Click="Vacuum_Clicked"/>
-                            <Button Margin="5"  Style="{StaticResource Mouvent.StandardButton}" Content="Wash"     Click="Wash_Clicked"/>
-                        </StackPanel>
-                    </Grid>
-                </GroupBox>
+                            <rxView:InkSupplyGrid x:Name="InkSupplyGrid"/>
+                            <TextBlock x:Name="ChillerError" Text="Chiller not running" Visibility="{Binding Running, Converter={StaticResource BoolToInVisible_Converter}}"
+                                       Foreground="Crimson" FontWeight="Bold" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                    </GroupBox>
                 </ScrollViewer>
-
-                
-                <!--<TextBlock Text="Print Heads" Background="{StaticResource Brush03}" FontWeight="Bold" Padding="5,0,0,0" Margin="0,5,0,0" />-->
 
                 <!-- Print Heads ____________________________________________________________________________________________________________-->
                 <ScrollViewer HorizontalScrollBarVisibility="Auto"  Margin="10,10,10,10" VerticalScrollBarVisibility="Hidden">
@@ -140,17 +139,29 @@
                         </Grid>
                     </GroupBox>
                 </ScrollViewer>
-                <!--
-               Head Distance
-                <StackPanel x:Name="HeadDistPanel" Margin="10, 0, 10, 0">
-                    <GroupBox Header="Head Distance [mm]" Style="{StaticResource MvtGroupBox}"> 
-                        <Grid x:Name="PrintBar" Visibility="Visible" >
-                            <rxView:PrintBarDistView/>
-                        </Grid>
-                    </GroupBox>
-                </StackPanel>-->
             </StackPanel>
         </ScrollViewer>
+
+        <rx:RxPopup x:Name="TxRobotPopup"
+                   PlacementTarget="{Binding ElementName=TxRobotButton}"
+                   Width="auto"
+                   MinWidth="100" 
+                   IsHitTestVisible="False"
+                   OpacityMask="White"
+                   >
+            <Grid Background="White">
+                <GroupBox Width="150" Style="{StaticResource MvtGroupBoxLeftAlignedHeader}" Header="^">
+                    <StackPanel Margin="10,2">
+
+                        <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40"  x:Name="Button_Cap" Content="CAP"  Margin="5" Click="Cap_Clicked"/>
+                        <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40"  x:Name="Button_Wipe" Content="Wipe"  Margin="5" Click="Wipe_Clicked"/>
+                        <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40"  x:Name="Button_Vacuum" Content="Vacuum"  Margin="5" Click="Vacuum_Clicked"/>
+                        <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40"  x:Name="Button_Wash" Content="Wash"  Margin="5" Click="Wash_Clicked"/>
+
+                    </StackPanel>
+                </GroupBox>
+            </Grid>
+        </rx:RxPopup>
 
     </Grid>
 
