--- a/rx_common_lib_cs/Resources/MvtGroupBox.xaml
+++ b/rx_common_lib_cs/Resources/MvtGroupBox.xaml
@@ -31,6 +31,32 @@
         </Setter>
     </Style>
 
+    <Style x:Key="MvtGroupBoxLeftAlignedHeader" TargetType="{x:Type GroupBox}">
+        <Setter Property="BorderBrush" Value="WhiteSmoke"></Setter>
+        <Setter Property="BorderThickness"  Value="1"/>
+        <Setter Property ="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType ="{x:Type GroupBox}">
+                    <Grid Margin="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Border BorderBrush="WhiteSmoke" BorderThickness="2" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"></Border>
+                        <Border Grid.Row="0" BorderThickness="1" BorderBrush="WhiteSmoke" Background="WhiteSmoke">
+                            <Label Margin="10,0,0,0" Foreground="#ff303030" FontWeight="SemiBold" FontSize="12" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                <ContentPresenter Margin="0" ContentSource="Header"/>
+                            </Label>
+                        </Border>
+                        <Border Grid.Row="1" Margin="8, 10 ,8 ,5">
+                            <ContentPresenter />
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="MvtGroupBoxNoBottomMargin" TargetType="{x:Type GroupBox}">
         <Setter Property="BorderBrush" Value="WhiteSmoke"></Setter>
         <Setter Property="BorderThickness"  Value="1"/>
